# SEM-3-DataStructure-C

./: .gitignore  C10_SinglyCirLL_PolynomialEval.c  C11_BST_Dictionary.c  C1_DynamicArrayUsingPointer.c  C2_InfixToPostfix.c  C3_BooksStack.c  C4_InfixToPostfix.c  C5_PostfixEvaluation.c  C6_TowerOfHanoi.c  C7_CirQ_CallCentre.c  C8_LinkedList_SongPlayList.c  C9_DoublyLL_BrowserHistory.c  CMakeLists.txt  README.md  check.c  main.c
